--- a/Views/Documentos/Delete.cshtml
+++ b/Views/Documentos/Delete.cshtml
@@ -48,6 +48,6 @@
 
     <form asp-action="Delete">
         <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-light btn-sm">Voltar para o inicio</a>
+        <a asp-action="Index" class="btn btn-light btn-sm">Voltar para o início</a>
     </form>
 </div>
