--- a/Views/Documentos/Edit.cshtml
+++ b/Views/Documentos/Edit.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary"/>
-                <a asp-action="Index" class="btn btn-light btn-sm">Voltar para o inicio</a>
+                <a asp-action="Index" class="btn btn-light btn-sm">Voltar para o início</a>
             </div>
         </form>
     </div>
