--- a/Views/Documentos/Index.cshtml
+++ b/Views/Documentos/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Titulo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Processo)
+                @Html.DisplayFor(modelItem => item.NomeProcesso)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Categoria)
