--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Documentos" asp-action="Index">Inicio</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Documentos" asp-action="Index">Início</a>
                         </li>
                     </ul>
                 </div>
@@ -34,7 +34,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - QualyTeam - <a asp-area="" asp-controller="Documentos" asp-action="Index">Inicio</a>
+            &copy; 2021 - QualyTeam - <a asp-area="" asp-controller="Documentos" asp-action="Index">Início</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
